# ragit

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  ECO-PAPER-9K.md  EMOJI_ANALYSIS_REPORT.md  LICENSE  README.md  TTL_EMOJI_ANALYSIS_REPORT.md  build_file_tree.rs  change_control_document.md  comment_out_hf_dataset_validator.cocci  comprehensive_emoji_vectorizer.py  context_dump.md  create_gemini_auth_crate.sh  directory_vectors.json  efficient_emoji_vectorizer.py  emoji_indexer.py  error_report.md  fix_candle_errors.sh  fix_impl_backend_storage_syntax.sh  groq_rate_limits.toml  index.cargo.txt  index.parquet.txt  index.rs.terms.txt  index.rs.txt  kitkat_commit_message.txt  log.txt  log1.md  notes.org  pilot-agent.config.json  refactoring_log.md  refactoring_plan.md  refactoring_status.md  report_path_embeddings.rs  run.sh  run_chunk_comparison.rs  sample_vectorized_emojis.json  standalone_path_embedder.rs  standalone_word_counter.rs  (+7 more)
crates/ignore/: Cargo.toml
crates/ignore/src/: lib.rs
crates/ignore/src/ignore/: ignore_struct.rs
crates/ragit-agent-action/: Cargo.toml
crates/ragit-agent-action/src/: #constants.rs#  #lib.rs#  .#constants.rs  action_enum.rs  action_get_instruction.rs  action_result_enum.rs  action_run.rs  action_state_update.rs  constants.rs  constants.rs~  lib.rs~  mod.rs  run_get_meta.rs  run_get_summary.rs  run_read_chunk.rs  run_read_dir.rs  run_read_file.rs  run_search.rs  run_simple_rag.rs  search_type_enum.rs  search_type_from_action.rs
crates/ragit-agent-action/src/action_result_render/: mod.rs  render_get_meta.rs  render_get_summary.rs  render_no_such_chunk.rs  render_no_such_dir.rs  render_no_such_file.rs  render_no_such_meta.rs  render_read_chunk.rs  render_read_chunk_ambiguous.rs  render_read_chunk_too_many.rs  (+5 more)
crates/ragit-chunk/: Cargo.toml
crates/ragit-chunk/src/: chunk_creation_utils.rs  create_chunk_from.rs  lib.rs
crates/ragit-command-audit/: Cargo.toml
crates/ragit-command-audit/src/: lib.rs
crates/ragit-command-bootstrap/: Cargo.toml
crates/ragit-command-bootstrap/src/: bootstrap_command.rs  file_copy_utils.rs  file_source.rs  lib.rs
crates/ragit-command-bootstrap/tests/: bootstrap_test.rs
crates/ragit-command-build/: Cargo.toml
crates/ragit-command-build/src/: lib.rs
crates/ragit-command-ls/: Cargo.toml
crates/ragit-command-ls/src/: lib.rs  ls_chunks.rs  ls_files.rs  ls_models.rs
crates/ragit-command-meta/: Cargo.toml
crates/ragit-command-meta/src/: lib.rs
crates/ragit-command-pdl/: Cargo.toml
crates/ragit-command-pdl/src/: lib.rs
crates/ragit-command-quiz/: Cargo.toml
crates/ragit-command-summary/: Cargo.toml
crates/ragit-command-summary/src/: lib.rs
crates/ragit-commands/: Cargo.toml
crates/ragit-commands/src/: lib.rs  main.rs  prelude.rs
crates/ragit-compilation-analysis/: Cargo.toml
crates/ragit-compilation-analysis/src/: lib.rs  main.rs
crates/ragit-config-commands/: Cargo.toml
crates/ragit-config-commands/src/: lib.rs
crates/ragit-error/: Cargo.toml
crates/ragit-error/src/: api_error.rs  lib.rs  lib.rs~
crates/ragit-feature-extractor/: Cargo.toml
crates/ragit-feature-extractor/src/: lib.rs  main.rs
crates/ragit-index/: Cargo.toml  log.txt
crates/ragit-index-chunk-methods/: Cargo.toml
crates/ragit-index-chunk-methods/src/: check_chunk_by_uid.rs  extract_keywords.rs  file_retrieval_methods.rs  get_all_chunk_files.rs  get_all_file_indexes.rs  get_all_image_files.rs  get_all_tfidf_files.rs  get_chunk_by_uid.rs  get_chunks_of_file.rs  get_image_bytes_by_uid.rs  get_image_description_by_uid.rs  get_images_of_file.rs  get_merged_chunk_of_file.rs  get_tfidf_by_chunk_uid.rs  get_tfidf_by_file_uid.rs  helpers.rs  lib.rs  load_all_chunks.rs  load_chunks_from_uids.rs  load_chunks_or_tfidf.rs  prelude.rs  retrieve_chunks.rs  summaries_to_chunks.rs
crates/ragit-index-core/: Cargo.toml
crates/ragit-index-core/src/: add_files.rs  clone.rs  config_methods.rs  dummy.rs  get_all_meta.rs  get_chunks_of_file.rs  get_image_schema.rs  get_initial_models.rs  get_merged_chunk_of_file.rs  get_meta_by_key.rs  get_path.rs  get_ragit_version_info.rs  get_summary.rs  get_tfidf_by_file_uid.rs  lib.rs  lib.rs.old  list_chunks.rs  load_config_from_home.rs  migrate.rs  prelude.rs  pull.rs  push.rs  read_ignore_file_command.rs  remove_files.rs  remove_meta_by_key.rs  retrieve_chunks.rs  set_config_by_key.rs  summary.rs
crates/ragit-index-core/tests/: add_files_test.rs
crates/ragit-index-effects/: Cargo.toml
crates/ragit-index-effects/src/: build.rs  build_chunks.rs  build_dashboard.rs  build_worker.rs  channel.rs  channel_imp.rs  index_functions.rs  init_worker.rs  init_workers.rs  lib.rs  request.rs  response.rs  run_worker_task.rs  uid_helpers.rs
crates/ragit-index-io/: Cargo.toml  Cargo.toml~
crates/ragit-index-io/src/: extract_keywords.rs  file_retrieval_methods.rs  get_chunk_by_uid.rs  get_chunks_of_file.rs  get_tfidf_by_chunk_uid.rs  helpers.rs  index_struct.rs  lib.rs  load_all_chunks.rs  load_chunks_from_uids.rs  prelude.rs  query_helpers.rs  retrieve_chunks.rs  summaries_to_chunks.rs  utils.rs
crates/ragit-index-model-management/: Cargo.toml
crates/ragit-index-model-management/src/: lib.rs
crates/ragit-index-storage/: Cargo.toml
crates/ragit-index-storage/src/: lib.rs
crates/ragit-index-types/: Cargo.toml
crates/ragit-index-types/src/: index_file_schema.rs  index_image_schema.rs  index_load_or_init.rs  index_struct.rs  lib.rs  load_mode.rs  prelude.rs
crates/ragit-index/src/: chunk_access_methods.rs  config_methods.rs  file_retrieval_methods.rs  ii_methods.rs  lib.rs  prelude.rs  prompt_access_methods.rs  query_helpers.rs  query_methods.rs
crates/ragit-legacy-error/: Cargo.toml
crates/ragit-model/: Cargo.toml
crates/ragit-model-query-response/: Cargo.toml
crates/ragit-model-query-response/src/: lib.rs
crates/ragit-model/src/: get_model_by_name.rs  lib.rs  model.rs  model_raw.rs  prelude.rs
crates/ragit-pdl-command/: Cargo.toml
crates/ragit-pdl-command/src/: lib.rs
crates/ragit-query/: Cargo.toml
crates/ragit-query/src/: query_helpers.rs
(+3563 files in other folders)
