[package]
name = "ragit"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "git-like rag pipeline"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit"

[workspace]
members = [
    "crates/prime-bit-counter",
]
exclude = [
    "crates/server",
    "crates/ragit-agent-action",
    "crates/ragit-legacy-agent",
    "crates/ragit-legacy-api-config",
    "crates/ragit-legacy-chunk",
    "crates/ragit-legacy-error",
    "crates/ragit-legacy-log-qa-results",
    "crates/ragit-legacy-uid",
    "crates/ragit-qa-system",
    "crates/ragit-model-query-response",
    "crates/ragit-command-archive",
    "crates/ragit-command-audit",
    "crates/ragit-command-cat-file",
    "crates/ragit-command-check",
    "crates/ragit-command-clone",
    "crates/ragit-command-config",
    "crates/ragit-command-extract-keywords",
    "crates/ragit-command-gc",
    "crates/ragit-command-help",
    "crates/ragit-command-ii-build",
    "crates/ragit-command-ii-reset",
    "crates/ragit-command-ii-status",
    "crates/ragit-command-ls",
    "crates/ragit-command-merge",
    "crates/ragit-command-meta",
    "crates/ragit-command-model",
    "crates/ragit-command-muse-summarize",
    "crates/ragit-command-pdl",
    "crates/ragit-command-pull",
    "crates/ragit-command-push",
    "crates/ragit-command-qa-test",
    "crates/ragit-command-qa-tune",
    "crates/ragit-command-remove",
    "crates/ragit-command-status",
    "crates/ragit-command-summary",
    "crates/ragit-command-version",
    
    "crates/layer7_application/commands/ragit-command-change-request",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
keywords = ["ragit", "ai", "llm", "knowledge-base"]
license = "MIT"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit"
description = "git-like rag pipeline"
homepage = "https://github.com/baehyunsol/ragit"

[workspace.dependencies]
lazy_static = "1.5.0"
mownstr = { path = "./vendor/mownstr" }
regex = "1.11.1"
resiter = "0.5.0"
sophia_api = { path = "./vendor/sophia_rs/api" }
sophia_iri = { path = "./vendor/sophia_rs/iri" }
thiserror = "1.0"
test-case = "2.2.2"
toml = "0.8.0"
serde = { version = "1.0.218", features = ["derive"] }

[dependencies]
num-prime = "0.4.0"
sysinfo = "0.30.13"

[features]
default = []
full = []

# This feature only affects `rag version --build-options`.
# Please make sure to enable this when you build ragit with "production" profile.
production = []



[profile.production]
inherits = "release"
codegen-units = 1
lto = "fat"

# mupdf does not compile without this patch on MacOS
[patch.crates-io]
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git" }
