[package]
name = "ragit"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "git-like rag pipeline"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit"

[workspace]
members = [ "crates/concept_indexer", "crates/glossary_search_indexer",
    "crates/prime-bit-counter", "crates/word_counter", "crates/term_report_generator",
    "crates/directory_reorganizer", "crates/path_relationship_matrix_generator", "crates/tree_term_reporter", "crates/term_quiz_master", "crates/semantic_term_processor", "tests/huggingface-candle-datasets-test", "refactor_tool", "crates/tmp_memory_test", "crates/rrust_kontekst_macros/ragit-instrumentation-macros",
    "vendor/solfunmeme-metameme",
]
exclude = [
    "crates/server",
    "crates/ragit-agent-action",
    "crates/ragit-legacy-agent",
    "crates/ragit-legacy-api-config",
    "crates/ragit-legacy-chunk",
    "crates/ragit-legacy-error",
    "crates/ragit-legacy-log-qa-results",
    "crates/ragit-legacy-uid",
    "crates/ragit-qa-system",
    "crates/ragit-model-query-response",
    "crates/ragit-command-archive",
    "crates/ragit-command-audit",
    "crates/ragit-command-cat-file",
    "crates/ragit-command-check",
    "crates/ragit-command-clone",
    "crates/ragit-command-config",
    "crates/ragit-command-extract-keywords",
    "crates/ragit-command-gc",
    "crates/ragit-command-help",
    "crates/ragit-command-ii-build",
    "crates/ragit-command-ii-reset",
    "crates/ragit-command-ii-status",
    "crates/ragit-command-ls",
    "crates/ragit-command-merge",
    "crates/ragit-command-meta",
    "crates/ragit-command-model",
    "crates/ragit-command-muse-summarize",
    "crates/ragit-command-pdl",
    "crates/ragit-command-pull",
    "crates/ragit-command-push",
    "crates/ragit-command-qa-test",
    "crates/ragit-command-qa-tune",
    "crates/ragit-command-remove",
    "crates/ragit-command-status",
    "crates/ragit-command-summary",
    "crates/ragit-command-version",
    
    "crates/layer7_application/commands/ragit-command-change-request",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
keywords = ["ragit", "ai", "llm", "knowledge-base"]
license = "MIT"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit"
description = "git-like rag pipeline"
homepage = "https://github.com/baehyunsol/ragit"
categories = ["science"]

[workspace.dependencies]
lazy_static = "1.5.0"
mownstr = { path = "./vendor/mownstr" }
regex = "1.11.1"
resiter = "0.5.0"
sophia_api = { path = "./vendor/sophia_rs/api" }
sophia_iri = { path = "./vendor/sophia_rs/iri" }
sophia_term = { path = "./vendor/sophia_rs/term" }
sophia_turtle = { path = "./vendor/sophia_rs/turtle" }
sophia_rio = { path = "./vendor/sophia_rs/rio" }
sophia_isomorphism = { path = "./vendor/sophia_rs/isomorphism" }
oxiri = "0.2.11"
criterion = "0.5"
rand = "0.8"
rio_turtle = "0.1.0"
rio_api = "0.1.0"
thiserror = "1.0"
test-case = "2.2.2"
toml = "0.8.0"
serde = { version = "1.0.218", features = ["derive"] }
accelerate-src = { version = "0.3.2" }
anyhow = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[dependencies]
ragit-agent = { path = "crates/legacy_and_refactoring/ragit-agent" }
ragit-index = { path = "crates/layer3_network/ragit-index" }
ragit-model = { path = "crates/layer7_application/ragit-model" }
ragit-model-query-response = { path = "crates/layer6_presentation/ragit-model-query-response" }
ragit-types = { path = "crates/layer1_physical/ragit-types" }
ragit-utils = { path = "crates/layer3_network/ragit-utils" }
ragit-pdl = { path = "crates/layer6_presentation/pdl" }
lazy_static = "1.5.0"
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sha3 = "0.10.8"
num-prime = "0.4.0"
sysinfo = "0.30.13"
async-recursion = "1.1.1"
chrono = "0.4.41"

[features]
default = []
full = []

# This feature only affects `rag version --build-options`.
# Please make sure to enable this when you build ragit with "production" profile.
production = []



[profile.production]
inherits = "release"
codegen-units = 1
lto = "fat"


