[package]
name = "ragit-chunk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ragit-types = { path = "../ragit-types" }
ragit-error = { path = "../ragit-error" }
ragit-config = { path = "../ragit-config" }
ragit-api = { path = "../api" }
ragit-fs = { path = "../fs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.8"
tokio = { version = "1.0", features = ["full"] }
regex = "1.5"
tera = "1.17"
