[package]
name = "ragit-command-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
sysinfo = "0.30.5"
serde_json = "1.0"
ragit-index-core = { path = "../ragit-index-core" }
ragit-types = { path = "../ragit-types" }
ragit-utils = { path = "../ragit-utils" }
ragit-fs = { path = "../fs" }
ragit-command-init = { path = "../ragit-command-init" }
glob = "0.3"
ragit-index-types = { path = "../ragit-index-types" }
ragit-index-io = { path = "../ragit-index-io" }
ragit-index-effects = { path = "../ragit-index-effects" }
ragit-index-query = { path = "../ragit-index-query" }
ragit-index-save-to-file = { path = "../ragit-index-save-to-file" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.3.0"
