[package]
name = "ragit-command-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
glob = "0.3"
ragit-command-init = { path = "../ragit-command-init" }
ragit-fs = { path = "../fs" }
ragit-index-core = { path = "../ragit-index-core" }
ragit-index-effects = { path = "../ragit-index-effects" }
ragit-index-io = { path = "../ragit-index-io" }
ragit-index-query = { path = "../ragit-index-query" }
ragit-index-save-to-file = { path = "../ragit-index-save-to-file" }
ragit-index-storage = { path = "../ragit-index-storage" }
ragit-index-types = { path = "../ragit-index-types" }
ragit-tfidf = { path = "../ragit-tfidf" }
ragit-types = { path = "../ragit-types" }
ragit-utils = { path = "../ragit-utils" }
serde_json = "1.0"
sysinfo = "0.30.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.3.0"
