[package]
name = "ragit-command-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
ragit-utils = { path = "../ragit-utils" }
ragit-api = { path = "../api" }
ragit-types = { path = "../ragit-types" }
ragit-index-io = { path = "../ragit-index-io" }
ragit-index-core = { path = "../ragit-index-core" }
ragit-query = { path = "../ragit-query" }
ragit-cli = { path = "../cli" }
serde_json = "1.0"
ragit-error = { path = "../ragit-error" }
ragit-schema = { path = "../ragit-schema" }
ragit-tfidf = { path = "../ragit-tfidf" }
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
