[package]
name = "ragit-command-pdl"
version = "0.1.0"
edition = "2021"

[dependencies]
ragit-utils = { path = "../ragit-utils" }
ragit-api = { path = "../api" }
ragit-types = { path = "../ragit-types" }
ragit-index-io = { path = "../ragit-index-io" }
ragit-index-types = { path = "../ragit-index-types" }
ragit-pdl = { path = "../pdl" }
ragit-schema = { path = "../ragit-schema" }
ragit-fs = { path = "../fs" }
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tera = "1.20"
chrono = "0.4"