[package]
name = "ragit-command-summary"
version = "0.1.0"
edition = "2021"

[dependencies]
ragit-cli = { path = "../cli" }
ragit-utils = { path = "../ragit-utils" }
ragit-index-io = { path = "../ragit-index-io" }
ragit-index-core = { path = "../ragit-index-core" }
ragit-types = { path = "../ragit-types" }
anyhow = "1.0"
