[package]
name = "ragit-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
ragit-utils = { path = "../ragit-utils" }
ragit-api = { path = "../api" }
ragit-fs = { path = "../fs" }
ragit-uid = { path = "../ragit-uid" }
ragit-pdl = { path = "../pdl" }
ragit-index = { path = "../ragit-index" }
ragit-index-io = { path = "../ragit-index-io" }
ragit-index-query = { path = "../ragit-index-query" }

ragit-types = { path = "../ragit-types" }
ragit-error = { path = "../ragit-error" }
ragit-core-utils = { path = "../ragit-core-utils" }
chrono = "0.4.40"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["arbitrary_precision"] }
sha3 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12.12", features = ["multipart"] }
image = { version = "0.25.5", default-features = false, features = ["rayon", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
tera = "1.20.0"
csv = { version = "1.3.1", optional = true }
mupdf = { version = "0.5.0", optional = true }
resvg = { version = "0.45.1", optional = true }
png = { version = "0.17.16", optional = true }
async-recursion = "1.1.1"
lazy_static = "1.5.0"
regex = "1.11.1"

[features]
default = ["csv"]
full = ["csv", "korean"]

csv = ["dep:csv"]
korean = []
pdf = ["dep:mupdf"]
svg = ["dep:resvg", "dep:png"]