[package]
name = "ragit-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1.1"
chrono = "0.4.40"
csv = { version = "1.3.1", optional = true }
image = { version = "0.25.5", default-features = false, features = ["rayon", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["multipart"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["arbitrary_precision"] }
sha3 = "0.10.8"
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
mupdf = { version = "0.5.0", optional = true }
resvg = { version = "0.45.1", optional = true }
png = { version = "0.17.16", optional = true }

ragit-api = { path = "../../crates/api" }
ragit-error = { path = "../ragit-error" }
ragit-fs = { path = "../../crates/fs" }
ragit-pdl = { path = "../../crates/pdl" }
ragit-types = { path = "../../crates/ragit-types" }
ragit-utils = { path = "../../crates/ragit-utils" }
ragit-index-io = { path = "../../crates/ragit-index-io" }
ragit-index = { path = "../../crates/ragit-index" }
ragit-index-query = { path = "../../crates/ragit-index-query" }
ragit-model-query-response = { path = "../../crates/ragit-model-query-response" }
ragit-cli = { path = "../../crates/cli" }
ragit-command-bootstrap = { path = "../../crates/ragit-command-bootstrap" }
tempfile = "3.20.0"

[features]
default = ["csv"]
full = ["csv", "korean"]

csv = ["dep:csv"]
korean = []
pdf = ["dep:mupdf"]
svg = ["dep:resvg", "dep:png"]