[package]
name = "ragit-compilation-analysis"
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
categories.workspace = true

[dependencies]
arrow = { version = "56.0.0", features = ["prettyprint"] }
parquet = { version = "56.0.0", features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
