[package]
name = "ragit-error"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ragit-file-error = { path = "../ragit-file-error" }
ragit-types = { path = "../ragit-types" }
ragit-pdl = { path = "../pdl" }
tera = "1.19"
