[package]
name = "ragit-index-chunk-methods"
version = "0.1.0"
edition = "2021"

[dependencies]
ragit-types = { path = "../ragit-types" }
ragit-error = { path = "../ragit-error" }
ragit-fs = { path = "../fs" }
ragit-utils = { path = "../ragit-utils" }
ragit-tfidf = { path = "../ragit-tfidf" }
ragit-index-types = { path = "../ragit-index-types" }
ragit-uid = { path = "../ragit-uid" }
serde_json = "1.0"
