[package]
name = "ragit-index-effects"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ragit-types = { path = "../ragit-types" }
ragit-error = { path = "../ragit-error" }
ragit-fs = { path = "../fs" }
ragit-utils = { path = "../ragit-utils" }
ragit-tfidf = { path = "../ragit-tfidf" }
ragit-api = { path = "../api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.8"
tokio = { version = "1.0", features = ["full"] }
