[package]
name = "ragit-index-effects"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ragit-types = { path = "../ragit-types" }
ragit-index-types = { path = "../ragit-index-types" }

ragit-fs = { path = "../fs" }
ragit-utils = { path = "../ragit-utils" }
ragit-model = { path = "../ragit-model" }
ragit-tfidf = { path = "../ragit-tfidf" }
ragit-api = { path = "../api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.8"
tokio = { version = "1.0", features = ["full"] }
ragit-readers = { path = "../ragit-readers" }
ragit-config = { path = "../ragit-config" }
ragit-uid = { path = "../ragit-uid" }
sysinfo = "0.30.13"
