[package]
name = "ragit-index-io"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow = "*"
lazy_static = "*"
regex = "*"
ragit-api = { path = "../api" }
ragit-config = { path = "../ragit-config" }

ragit-fs = { path = "../fs", features = ["diff"] }
ragit-index-types = { path = "../ragit-index-types" }
ragit-pdl = { path = "../pdl" }
ragit-prompt-management = { path = "../ragit-prompt-management" }
ragit-tfidf = { path = "../ragit-tfidf" }
ragit-types = { path = "../ragit-types" }
ragit-utils = { path = "../ragit-utils" }
ragit-index-storage = { path = "../ragit-index-storage" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
tokio = { version = "1.0", features = ["full"] }
