[package]
name = "ragit-index-model-management"
version = "0.1.0"
edition = "2021"

[dependencies]
ragit-types = { path = "../ragit-types" }
ragit-index-types = { path = "../ragit-index-types" }
ragit-model = { path = "../ragit-model" }
ragit-utils = { path = "../ragit-utils" }
ragit-fs = { path = "../fs" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
