[package]
name = "ragit-index-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ragit-types = { path = "../ragit-types" }
ragit-model = { path = "../ragit-model" }
ragit-utils = { path = "../ragit-utils" }
ragit-fs = { path = "../fs" }
ragit-error = { path = "../ragit-error" }


tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
lazy_static = "1.4.0"
strum = { version = "0.25", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
