[package]
name = "ragit-index-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ragit-types = { path = "../ragit-types" }
ragit-model = { path = "../ragit-model" }
ragit-utils = { path = "../ragit-utils" }
ragit-error = { path = "../ragit-error" }
ragit-config = { path = "../ragit-config" }
ragit-api = { path = "../api" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
ragit-tfidf = { path = "../ragit-tfidf" }
tokio = { version = "1.0", features = ["full"] }

ragit-ignore = { path = "../ignore" }
