[package]
name = "ragit-index"
version = "0.1.0"
edition = "2021"

[dependencies]

ragit-uid = { path = "../ragit-uid" }
ragit-types = { path = "../ragit-types" }
ragit-utils = { path = "../ragit-utils" }

ragit-config = { path = "../ragit-config" }
ragit-readers = { path = "../ragit-readers" }
ragit-pdl = { path = "../pdl" }

ragit-fs = { path = "../fs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.8"
tokio = { version = "1.0", features = ["full"] }
flate2 = "1.0"
rust-stemmers = "1.2"
tera = "1.19"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
strum = { version = "0.25", features = ["derive"] }
url = "2.4"
image = "0.24"
lazy_static = "1.4.0"
regex = "1.5"
ragit-api = { path = "../api" }
ragit-model-query-response = { path = "../ragit-model-query-response" }
