[package]
name = "ragit-model-query-response"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ragit-types = { path = "../ragit-types" }
ragit-model = { path = "../ragit-model" }
ragit-utils = { path = "../ragit-utils" }
ragit-pdl = { path = "../pdl" }
