[package]
name = "ragit-model"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
ragit-types = { path = "../ragit-types" }
ragit-fs = { path = "../fs" }
ragit-utils = { path = "../ragit-utils" }
ragit-pdl = { path = "../pdl" }
ragit-error = { path = "../ragit-error" }




